# YAInfer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: status_code.hpp
include/data/: load_data.hpp  tensor.hpp
include/factory/: layer_factory.hpp
include/layer/: layer.hpp  maxpooling_layer.hpp  relu_layer.hpp  sigmoid_layer.hpp
include/ops/: maxpooling_op.hpp  op.hpp  relu_op.hpp  sigmoid_op.hpp
include/parser/: parse_expression.hpp
include/runtime/: runtime_attr.hpp  runtime_datatype.hpp  runtime_ir.hpp  runtime_op.hpp  runtime_operand.hpp  runtime_parameter.hpp
source/data/: load_data.cpp  tensor.cpp
source/factory/: layer_factor.cpp
source/layer/: layer.cpp  maxpooling_layer.cpp  relu_layer.cpp  sigmoid_layer.cpp
source/ops/: maxpooling_op.cpp  op.cpp  relu_op.cpp  sigmoid_op.cpp
source/parser/: parse_expression.cpp
source/runtime/: runtime_ir.cpp
test/: CmakeLists.txt  test_gtest.cpp  test_load_data.cpp  test_main.cpp  test_maxpooling.cpp  test_relu.cpp  test_runtime1.cpp  test_sigmoid.cpp  test_tensor.cpp
